--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,14 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "public/fonts.scss",
+        "config": {
+          "compileImported": true,
+          "autoCompile": false
+        }
+      }
+    ]
   }
 }
